# wasm_zip

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: publish.yml
demo/: package-lock.json  package.json  vite.config.ts
demo/src/: main.ts
src/: lib.rs
src/zip_archiver/: ZipArchiver.rs  archiver.rs  mod.rs  zip_archiver.rs
